--- a/src/main/resources/templates/pizzeria/index.html
+++ b/src/main/resources/templates/pizzeria/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     <div class="row py-4">
         <div class="col-9">
-            <a class="btn btn-primary" th:href="@{/pizzeria/create}"><i class="fa-solid fa-plus"></i> AGGIUNGI</a>
+            <a class="btn btn-primary" th:href="@{/pizzeria/create}" sec:authorize="hasAuthority('ADMIN')"><i class="fa-solid fa-plus"></i> AGGIUNGI</a>
         </div>
         <div class="col">
             <form class="d-flex" role="search">
@@ -42,10 +42,10 @@
                             <td th:text="${pizza.formattedPrice}"></td>
                             <td>
                                 <a class="btn btn-primary" th:href="@{|/pizzeria/show/${pizza.id}|}"><i class="fa-solid fa-circle-info"></i></a>
-                                <a class="btn btn-success" th:href="@{|/pizzeria/edit/${pizza.id}|}"><i class="fa-solid fa-pen-to-square"></i></a>
+                                <a class="btn btn-success" th:href="@{|/pizzeria/edit/${pizza.id}|}" sec:authorize="hasAuthority('ADMIN')"><i class="fa-solid fa-pen-to-square"></i></a>
                             </td>
                             <td>
-                                <form action="#" th:action="@{'/pizzeria/delete/{id}'(id=${pizza.id})}" method="post">
+                                <form action="#" th:action="@{'/pizzeria/delete/{id}'(id=${pizza.id})}" method="post"  sec:authorize="hasAuthority('ADMIN')">
                                     <button class="btn btn-danger" type="submit" id="submitButton" onclick="return confirm('Sei sicuro di voler proseguire?')"><i class="fa-solid fa-trash"></i></button>
                                 </form>
                             </td>
