--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -16,11 +16,22 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" th:href="@{/ingredienti}">Ingredienti</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item"  sec:authorize="hasAuthority('ADMIN')">
               <a class="nav-link" th:href="@{/pizzeria/create}">Aggiungi nuova pizza</a>
             </li>
           </ul>
           <div class="d-flex">
+            <div class="flex-shrink-0 dropdown">
+              <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle text-light" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-user text-light"></i>
+              </a>
+              <ul class="dropdown-menu text-small shadow">
+                <li><span class="dropdown-item" sec:authentication="name"></span></li>
+                <li><span class="dropdown-item" sec:authentication="principal.authorities">Settings</span></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" th:href="@{/logout}"><i class="fas fa-sign-out"></i> Logout</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
